--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@ this is second version i.e V2
 This is my second version i.e V2
 
 reqiured entity are added in this files
+
+versions are verified by the client
+
