--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ This is my second version i.e V2
 
 reqiured entity are added in this files
 
-versions are verified by the client
+versions are verified by the Senior and Client
 
